Fixed top spacing for MSS ding

--- a/source/sass/buyers-guide/views/product.scss
+++ b/source/sass/buyers-guide/views/product.scss
@@ -370,6 +370,10 @@ $pni-product-breakpoint-larger: $bp-md;
         padding-right: 0;
       }
     }
+
+    &.show-ding::after {
+      top: 0;
+    }
   }
 
   p.criterion-label {
